app/globals.css
@import "tailwindcss";
@import "material-symbols";
@plugin "daisyui";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --color-scarlet-50: oklch(0.97 0.0152 22.39);
  --color-scarlet-100: oklch(0.93 0.0346 24.37);
  --color-scarlet-200: oklch(0.88 0.0661 25.41);
  --color-scarlet-300: oklch(0.8 0.1175 26.36);
  --color-scarlet-400: oklch(0.7 0.188463 28.751);
  --color-scarlet-500: oklch(0.65 0.2349 30.49);
  --color-scarlet-600: oklch(0.63 0.2525 30.21);
  --color-scarlet-700: oklch(0.56 0.221367 30.3463);
  --color-scarlet-800: oklch(0.48 0.1893 30.47);
  --color-scarlet-900: oklch(0.43 0.159 30.4);
  --color-scarlet-950: oklch(0.28 0.1045 32.32);
  --color-mint-500: oklch(0.72 0.11 178);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}
/* 
html {
  scroll-padding-top: 2rem;
} */


body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

@keyframes pulseColor {
  0% {
    color: #06b6d4; /* cyan-500 */
  }
  30% {
    color: #af12e9; /* cyan-500 */
  }
  50% {
    color: #ff3923; /* scarlet-500 */
  }
  80% {
    color: #af12e9; /* cyan-500 */
  }
  100% {
    color: #06b6d4; /* cyan-500 */
  }
}

.animate-pulse-color {
  animation: pulseColor 5s cubic-bezier(0.25, 0.46, 0.45, 0.94) infinite;
}

.no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

